Fixed centering issue for link menu on mobile.

--- a/src/components/UI/Navbar/Navbar.module.css
+++ b/src/components/UI/Navbar/Navbar.module.css
@@ -87,32 +87,31 @@
 }
 
 .mobile-menu-overlay {
-	position: fixed;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	backdrop-filter: blur(6px) !important;
 	z-index: 5;
 	position: fixed;
-	transform: translateY(-5vh);
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100vw;
 	height: 110vh;
 	padding-bottom: 10vh;
+	transform: translateY(-5vh);
+	backdrop-filter: blur(6px) !important;
 	background: rgba(var(--bg-dark-rgb), 0.3);
 }
 
 .mobile-menu {
-	position: fixed;
 	display: flex;
+    position: absolute;
+    top: 50%;
+	left: 50%;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: clamp(2rem, 4vh, 4rem);
 	width: clamp(200px, 40vw, 400px);
 	padding: 32px 128px;
+	gap: clamp(2rem, 4vh, 4rem);
+    transform: translate(-50%, -50%) !important;
 	border-radius: 12px;
 	backdrop-filter: blur(20px) !important;
 	background: rgba(var(--bg-dark-rgb), 0.6);
@@ -122,9 +121,9 @@
 
 .mobile-menu-link {
 	display: block;
-	font-family: var(--font-jura);
 	font-weight: 500;
 	font-size: 1.1em;
+	font-family: var(--font-jura);
 	text-align: center;
 }
 
